--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       style="width:40%;text-align:center;height:2px;margin-top:30px;background:#8AB9D1">
       <div class="social">
         <ul>
-            <li><a id="mail" href="mailto:{{ site.owner.email }}"><span class="foot-link">Contact Me</span></a></li>
+            <li><a id="mail" href="mailto:{{ site.owner.email }}"><span class="foot-link">Email Me</span></a></li>
         </ul>
     </div>
     </aside>
