--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,24 @@
-<div class="push"></div>
-  <footer>
-    <aside class="wrap">
+<html>
+  <body>
+    <div class="push"></div>
+    <footer>
+      <aside class="wrap">
 
-      <hr
-      style="width:60%;text-align:center;height:2px;margin-top:30px;background:#8AB9D1">
-      <div class="social">
-        <ul>
-            <li><a id="mail" href="mailto:{{ site.owner.email }}"><span class="foot-link">Email Me</span></a></li>
-        </ul>
-    </div>
-    </aside>
-  </footer>
+        <hr
+          style="width:60%;opacity:0.5;text-align:center;height:2px;margin-top:30px;background:#8AB9D1">
+        <div class="social">
+          <ul>
+              <li><a id="mail" href="mailto:{{ site.owner.email }}"><span class="foot-link">Email Me</span></a></li>
+          </ul>
+      </div>
+      </aside>
+    </footer>
 
-  <!-- If they're out, get some from the cellar -->
-  <script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-  <script src="{{ site.url }}/assets/js/retina.min.js"></script>
+    <!-- If they're out, get some from the cellar -->
+    <script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+    <script src="{{ site.url }}/assets/js/retina.min.js"></script>
 
-  <!-- Custom JS -->
-  <script src="{{ site.url }}/assets/js/scripts.js"></script>
-
-
+    <!-- Custom JS -->
+    <script src="{{ site.url }}/assets/js/scripts.js"></script>
   </body>
 </html>
