--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -420,6 +420,7 @@ header.site-header nav {
         img {
             margin: 15px auto;
             width: 500px;
+            border-radius: 4px;
         }
         .summary {
             font-size: 18px;
